--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   "homepage": "https://github.com/BoxLegends/EmployeeTracker2#readme",
   "dependencies": {
     "console.table": "^0.10.0",
+    "express": "^4.18.2",
     "inquirer": "^8.2.4",
-    "mysql": "^2.18.1"
+    "jshint": "^2.12.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.1.2"
   }
 }
