--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/BoxLegends/EmployeeTracker2#readme",
   "dependencies": {
-    "console.table": "^0.10.0",
+    "console-table-printer": "^2.11.1",
     "express": "^4.18.2",
     "inquirer": "^8.2.4",
     "jshint": "^2.12.0",
